--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -41,45 +41,58 @@
     }
     #chk:checked~.header__menu {
         right: 0;
-        li {
+        li:first-child{
+          border-top: 2px solid rgba(#fff, .2);
+        }
+        li:not(:last-child) {
             margin: 0;
             width: 100%;
+            border-bottom: 2px solid rgba(#fff, .2);
+
         }
     }
     .header__inner {
         @include flex(center, space-between);
     }
     .header__menu {
-        margin-left: 35%;
+        height: 20px;
+        display: flex;
+        width: 100%;
+        justify-items: flex-end;
+        justify-content: flex-end;
+        @media #{$res1000} {
+          margin-left: 30px;
+        }
         @media #{$res800} {
             position: fixed;
             width: 100%;
             height: 100%;
-            background: gray;
+            background: #deb887;
             right: -100%;
             top: 0;
             text-align: center;
             transition: 0.7s;
             z-index: 2;
+            margin-left: 0;
+            display: block;
+            padding: 180px 0;
+
         }
-        ul {
-            height: 20px;
-            display: flex;
-            @media #{$res800} {
-                padding: 180px 0;
-                display: block;
-            }
-        }
+        // ul {
+        
+        //     @media #{$res800} {
+        //         display: block;
+        //     }
+        // }
         li {
             &:not(:last-child) {
                 position: relative;
                 transform: 0;
             }
-            &:nth-last-child(2) {
-                margin: 0;
-            }
+            // &:nth-last-child(2) {
+            //     margin: 0;
+            // }
             &:hover {
-                width: 11%;
                 &::after {
                     width: 100%;
                     transition: 0.4s all;
@@ -158,6 +171,7 @@
         }
         li {
             padding: 0;
+            cursor: pointer;
             @media #{$res370} {
                 margin: 0 10px;
             }
